Use a light red fill instead of yellow

--- a/panel/panel.html
+++ b/panel/panel.html
@@ -14,6 +14,10 @@
     <stop offset="0%" stop-color="#F2C94C"/>
     <stop offset="100%" stop-color="#F2994A"/>
   </linearGradient>
+  <linearGradient id="dvtsvg-gradient-red" x1="0%" y1="0%" x2="100%" y2="100%">
+    <stop offset="0%" stop-color="#ee0979"/>
+    <stop offset="100%" stop-color="#ff6a00"/>
+  </linearGradient>
 </svg>
 <main>
   <div class="Toolbar">
@@ -27,8 +31,8 @@
         style="--svg-fill:url('#dvtsvg-gradient-blue');--svg-stroke:none;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
-      <button aria-label="Yellow fill" title="Yellow fill"
-        style="--svg-fill:url('#dvtsvg-gradient-yellow');--svg-stroke:none;">
+      <button aria-label="Red fill" title="Red fill"
+        style="--svg-fill:url('#dvtsvg-gradient-red');--svg-stroke:none;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Green stroke" title="Green stroke"
