First stab at a dark theme

--- a/panel/panel.html
+++ b/panel/panel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="lightTheme">
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="panel.css">
@@ -23,25 +23,25 @@
 </svg>
 <main>
   <div class="Toolbar">
-    <div class="Toolbar-search">
-      <input aria-label="Filter on id or class" placeholder="Filter on id or class">
-    </div>
+    <input class="Toolbar-search"
+           aria-label="Filter on id or class"
+           placeholder="Filter on id or class">
     <div class="Toolbar-styles">
       <span>Default style</span>
-      <button aria-label="Black fill" title="Black fill" aria-selected="true"
-        style="--svg-fill:black;--svg-stroke:none;--svg-color:black;">
+      <button aria-label="Context color fill" title="Context color fill" aria-selected="true"
+        style="--svg-fill:currentColor;--svg-stroke:none;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Blue fill" title="Blue fill"
-        style="--svg-fill:url('#dvtsvg-gradient-blue');--svg-stroke:none;--svg-color:rgba(0,0,255,.75);">
+        style="--svg-fill:url('#dvtsvg-gradient-blue');--svg-stroke:none;--svg-color:#34A0FF;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Red fill" title="Red fill"
-        style="--svg-fill:url('#dvtsvg-gradient-red');--svg-stroke:none;--svg-color:rgba(255,0,0,.75);;">
+        style="--svg-fill:url('#dvtsvg-gradient-red');--svg-stroke:none;--svg-color:#FC232C;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Green stroke" title="Green stroke"
-        style="--svg-fill:none;--svg-stroke:#56b832;">
+        style="--svg-fill:none;--svg-stroke:#56b832;--svg-color:rgba(160,160,160,.5);">
         <svg width="16" height="16"><rect stroke-width="2" x="3" y="3" width="10" height="10"/></svg>
       </button>
     </div>
