--- a/src/panel-old/panel.html
+++ b/src/panel-old/panel.html
@@ -7,16 +7,16 @@
 </head>
 <body style="--svg-fill:black;--svg-stroke:none;">
 <svg height="0" width="0" style="position:absolute;" aria-hidden="true">
-  <linearGradient id="dvtsvg-gradient-blue" x1="0%" y1="0%" x2="100%" y2="100%">
+  <linearGradient id="dsvg-gradient-blue" x1="0%" y1="0%" x2="100%" y2="100%">
     <stop offset="0%" stop-color="#34A0FF"/>
     <stop offset="33%" stop-color="#1080E6"/>
     <stop offset="100%" stop-color="#0324A6"/>
   </linearGradient>
-  <linearGradient id="dvtsvg-gradient-yellow" x1="0%" y1="0%" x2="100%" y2="100%">
+  <linearGradient id="dsvg-gradient-yellow" x1="0%" y1="0%" x2="100%" y2="100%">
     <stop offset="0%" stop-color="#FC5923"/>
     <stop offset="100%" stop-color="#F2994A"/>
   </linearGradient>
-  <linearGradient id="dvtsvg-gradient-red" x1="0%" y1="0%" x2="100%" y2="100%">
+  <linearGradient id="dsvg-gradient-red" x1="0%" y1="0%" x2="100%" y2="100%">
     <stop offset="0%" stop-color="#FC232C"/>
     <stop offset="100%" stop-color="#D51B51"/>
   </linearGradient>
@@ -33,15 +33,15 @@
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Blue fill" title="Blue fill"
-        style="--svg-fill:url('#dvtsvg-gradient-blue');--svg-stroke:none;--svg-color:#34A0FF;">
+        style="--svg-fill:url('#dsvg-gradient-blue');--svg-stroke:none;--svg-color:#34A0FF;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Red fill" title="Red fill"
-        style="--svg-fill:url('#dvtsvg-gradient-red');--svg-stroke:none;--svg-color:#FC232C;">
+        style="--svg-fill:url('#dsvg-gradient-red');--svg-stroke:none;--svg-color:#FC232C;">
         <svg width="16" height="16"><rect x="2" y="2" width="12" height="12"/></svg>
       </button>
       <button aria-label="Green stroke" title="Green stroke"
-        style="--svg-fill:none;--svg-stroke:#56b832;--svg-color:rgba(160,160,160,.5);">
+        style="--svg-fill:rgba(100,200,0,.35);--svg-stroke:#56b832;--svg-color:rgba(100,200,0,.35);">
         <svg width="16" height="16"><rect stroke-width="2" x="3" y="3" width="10" height="10"/></svg>
       </button>
     </div>
